--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     />
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>Vite + React</title>
+    <title>ProseMirror</title>
   </head>
   <body>
     <div id="root"></div>
-    <script
-      crossorigin="anonymous"
-      src="//unpkg.com/react-scan/dist/auto.global.js"
-    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
