--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- paste this BEFORE any scripts -->
+<script
+  crossOrigin="anonymous"
+  src="//unpkg.com/react-scan/dist/auto.global.js"
+></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
