feat: Refactor abbreviation plugin with dynamic casing and prevent trigger settings; remove unused components and styles

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <div id="root"></div>
     <!-- paste this BEFORE any scripts -->
-<script
+<!-- <script
   crossOrigin="anonymous"
   src="//unpkg.com/react-scan/dist/auto.global.js"
-></script>
+></script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
