--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>ProseMirror</title>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
     <!-- paste this BEFORE any scripts -->
-<!-- <script
+    <!-- <script
   crossOrigin="anonymous"
   src="//unpkg.com/react-scan/dist/auto.global.js"
 ></script> -->
